<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context=".MainActivity">

    <!-- Button to send a UDP request -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/send_a_udp_request"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/refresh"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/refresh"

        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintBottom_toTopOf="@+id/udp_packet"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/udp_packet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintBottom_toTopOf="@+id/permissions"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/udp_packet"
        app:layout_constraintBottom_toTopOf="@+id/ip_address"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>


    <!-- EditText to enter the IP address -->
    <EditText
        android:id="@+id/ip_address"
        style="@style/udp_message"

        android:autofillHints=""
        android:hint="@string/enter_ip_address"
        android:inputType="text"

        app:layout_constraintTop_toBottomOf="@+id/udp_packet"
        app:layout_constraintBottom_toTopOf="@+id/port"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/port"
        style="@style/udp_message"

        android:autofillHints=""
        android:hint="@string/enter_port"
        android:inputType="text"

        app:layout_constraintTop_toBottomOf="@+id/ip_address"
        app:layout_constraintBottom_toTopOf="@+id/message"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/message"
        style="@style/udp_message"

        android:autofillHints="string"
        android:hint="@string/enter_message"
        android:inputType="text"

        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
